--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae - Rizven Mutiara Habibi</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/847/847969.png">
+  <link rel="icon" href="https://profil.jpg">
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
   <div class="max-w-4xl mx-auto bg-white shadow-2xl rounded-2xl mt-10 overflow-hidden">
