--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae - Rizven Mutiara Habibi</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="https://profil.jpg">
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/847/847969.png">
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
   <div class="max-w-4xl mx-auto bg-white shadow-2xl rounded-2xl mt-10 overflow-hidden">
     
     <!-- Header -->
     <div class="flex flex-col md:flex-row items-center p-8 bg-gradient-to-r from-indigo-500 to-purple-500 text-white">
-      <img src="https://via.placeholder.com/150" alt="Foto Profil" class="w-40 h-40 rounded-full border-4 border-white shadow-lg">
+      <img src="profil.jpg" alt="Foto Profil" class="w-40 h-40 rounded-full border-4 border-white shadow-lg">
       <div class="md:ml-8 mt-6 md:mt-0 text-center md:text-left">
         <h1 class="text-3xl font-bold">Rizven Mutiara Habibi</h1>
         <p class="text-lg mt-2">3D Artist & Animator</p>
