--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="flex flex-col md:flex-row items-center p-8 bg-gradient-to-r from-indigo-500 to-purple-500 text-white">
       <img src="profil.jpg" alt="Foto Profil" class="w-40 h-40 rounded-full border-4 border-white shadow-lg">
       <div class="md:ml-8 mt-6 md:mt-0 text-center md:text-left">
-        <h1 class="text-3xl font-bold">Rizven Mutiara Habibi</h1>
+        <h1 class="text-3xl font-bold">Rizven M.H</h1>
         <p class="text-lg mt-2">3D Artist & Animator</p>
         <p class="mt-1 opacity-80">15 Tahun Pengalaman di Dunia 3D Animasi</p>
       </div>
